# monet

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHAT_SPEC.md  CHECKS.md  CLAUDE.md  CLAUDE.original.md  COMPATIBILITY.md  ISSUES.md  LICENSE  POTENTIAL_HOOKS_ARCHITECTURE.md  README.md  REFACTOR.md  SPEC.md  SPIKES.md  TARGET_ARCHITECTURE.md  UPDATE_BRIEF.md  aegra.json  architecture.html  architecture_checks_split_deployment.md  clickhouse-config.xml  color-palettes.txt  docker-compose.dev.yml  graph-extension-points.md  langgraph.json  mkdocs.yml  models.md  monet-cli-logo.txt  pyproject.toml  queue-agent-helper-funcs.md  queue-push-pull-system-update.md  sdk-enhancement-proposal-v2.md  sdk-enhancement-proposal-v3.md  sdk-enhancement-proposal.md
.github/: dependabot.yml
.github/workflows/: ci.yml  compat.yml  digest-bump.yml  fixture-drift.yml  go-ci.yml  security.yml
claude-web-artifacts/: agent-implementations.md  agent-onboarding.md  supervisor-graph.md  system-architecture.md  tech-spikes.md
docker/: adapter.Dockerfile
docs/: a2a-protocol-research.md  getting-started.md  index.md  overview.md  potential-target-architecture.md
docs/api/: artifacts.md  catalogue.md  client.md  core.md  descriptors.md  orchestration.md  queue.md  server.md  state.md
docs/architecture/: adapter-roadmap.md  adapter-sdk-spec.md  adr-001-collapse-three-graph-split.md  adr-002-queue-backend-consolidation.md  adr-003-agent-registration-collapse.md  adr-004-orchestrator-fed-planner-roster.md  adr-005-go-tui-migration.md  adr-006-monet-native-api.md  adr-007-result-delivery-polling.md  adr-008-data-plane-gateway.md  deployment-scenarios.md  design-principles.md  graph-topology.md  memory-service.md  openclaw-mvp.md  planner-structured-output.md  researcher-migration.md  roadmap.md  server-contract.md  worker-composition-plan.md  writer-migration.md
docs/guides/: adapter-protocol.md  adapter-sdk.md  agents.md  artifacts.md  catalogue.md  client.md  custom-graphs.md  deploy-production.md  distribution.md  observability.md  orchestration.md  server.md
docs/reference/: adapter-config.md  codebase-layout.md  env-vars.md
docs/runbooks/: monet-tui-rollback.md
examples/agent-adapters/: CLAUDE.md
examples/agent-recruitment/: README.md  aegra.json  monet.toml  pyproject.toml  server_graphs.py
examples/agent-recruitment/fixtures/: baseline.json  harness.json
examples/agent-recruitment/src/recruitment/: __init__.py  sandbox.py  schemas.py  tools.py
examples/agent-recruitment/src/recruitment/agents/: __init__.py  code_executor.py  data_analyst.py
examples/agent-recruitment/tests/: conftest.py  test_recruitment_example.py
examples/chat-default/: .env.example  README.md  pyproject.toml
examples/chat-extended/: .env.example  README.md  aegra.json  pyproject.toml  server_graphs.py
examples/custom-graph/: README.md  aegra.json  monet.toml  pyproject.toml  server_graphs.py
examples/custom-pipeline/: .env.example  README.md  aegra.json  monet.toml  pyproject.toml  server_graphs.py
examples/custom-pipeline/graphs/: reviewed.py
examples/custom-stack/: .env.example  README.md  aegra.json  monet.toml  pyproject.toml  server_graphs.py
examples/deployed/: .env.example  README.md  client.py  docker-compose.split-plane.yml  docker-compose.yml  langgraph.json  pyproject.toml  railway.toml
examples/deployed/railway/: README.md  server.toml  worker.toml
examples/deployed/server/: Dockerfile  aegra.json  docker-compose.yml  pyproject.toml  server_graphs.py
examples/deployed/worker/: Dockerfile  pyproject.toml  railway.toml
examples/deployed/worker/agents/: __init__.py
examples/local/: .env.example  README.md  docker-compose.yml  pyproject.toml
examples/openclaw-adoption/: .env.example  README.md  agents.toml  monet.toml  pyproject.toml
examples/quickstart/: .env.example  README.md  client.py  langgraph.json  pyproject.toml  server_graphs.py
examples/quickstart-local/: README.md  pyproject.toml  run.py
examples/quickstart-server/: .env.example  README.md  pyproject.toml
examples/social_media_content/: README.md  __init__.py  __main__.py  agents.py  cli.py  entry_graph.py  execution_graph.py  planning_graph.py  run.py  run_cli.py  test_social_media.py
examples/social_media_llm/: .env.example  README.md  __init__.py  __main__.py  agents.py  app.py  cli.py  client.py  display.py  entry_graph.py  planner.py  planning_graph.py  prompts.py  publisher.py  publisher_cli.py  pyproject.toml  qa.py  researcher.py  run.py  run_cli.py  server_graphs.py  state.py  test_social_media_llm.py  workflow.py
examples/social_media_llm/agents/: __init__.py  writer.py
examples/social_media_llm/graphs/: __init__.py  entry.py  execution.py  planning.py
examples/social_media_llm/tests/: __init__.py  test_agents.py
examples/spike_catalogue/: protocol.py  test_catalogue_seam.py
examples/spike_orchestration/: test_graph.py
examples/spike_transport/: cli_agent.py  decorator.py  (+5 more)
go/: go.mod  go.sum
plans/: architecture-fixes-2026-04-20.md
tasks/: chat_and_collapse_plan.md  custom-stack-plan.md  follow-up-coupling-cleanup.md  lessons.md  registration-collapse-plan.md  todo.md
tests/: _fakes.py  conftest.py  test_adapter_config.py  test_adapter_env.py  test_adapter_health.py  test_adapter_jsonpath.py  test_adapter_proxy_http.py  test_adapter_proxy_openai.py  test_adapter_server.py  test_aegra_auth.py  test_agent_loader.py  test_agent_manifest.py  test_agents_config.py  test_agents_endpoint.py  test_artifacts.py  test_auth.py  test_capability_index.py  test_catalogue.py  test_chat_app.py  test_chat_cli.py  test_chat_config.py  test_chat_end_to_end.py  test_chat_fail_fast.py  test_chat_graph.py  test_cli.py  test_client_auth.py  test_client_pointer_shape.py  test_client_resume_race.py  test_config_subpackage.py  test_context.py  test_decorator.py  test_default_compound_graph.py  test_default_pipeline_events.py  test_descriptors.py  test_direct_callers.py  test_discovery.py  test_entry_triage_filter.py  test_example_cli.py  test_execution_entrypoint.py  test_graphs.py  (+40 more)
(+583 files in other folders)
