[project]
name = "monet"
version = "0.1.0"
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Evan O'Keefe", email = "evan.okeefe39@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "sqlalchemy>=2.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-postgres>=1.0",
    "psycopg[binary]>=3.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "aiosqlite>=0.19",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.scripts]
monet = "monet.cli:cli"

[project.optional-dependencies]
agents = [
    "langchain-core>=0.3",
    "langchain>=0.3",
    "jinja2>=3.1",
    # Provider packages are user-supplied.
    # Install your own, e.g.:
    #   pip install langchain-google-genai  (Gemini)
    #   pip install langchain-anthropic     (Claude)
    #   pip install langchain-openai        (GPT)
    # Search providers are optional at runtime:
    #   pip install exa-py               (EXA_API_KEY — preferred for researcher/deep)
    #   pip install langchain-community  (TAVILY_API_KEY — alternative)
]
examples = [
    "monet[agents]",
    "aegra-cli>=0.9",
    "langchain-google-genai>=2.0",
    "langchain-groq>=0.2",
    "langchain-community>=0.3",
    "tavily-python>=0.5",
    "exa-py>=1.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/evanokeefe39/monet"
Repository = "https://github.com/evanokeefe39/monet"
Issues = "https://github.com/evanokeefe39/monet/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monet"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "mkdocs-material>=9.7.6",
    "pre-commit>=4.5.1",
    "aegra-cli>=0.9",
    "symdex>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
asyncio_mode = "auto"
markers = [
    "integration: requires external services (docker-compose)",
    "llm_integration: requires LLM API keys (GEMINI_API_KEY, GROQ_API_KEY, TAVILY_API_KEY)",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
# Example subdirs carry duplicate module names (server_graphs.py in both
# compose/ and railway/ variants). Exclude from the type check; the
# examples.* override already suppresses errors, but exclusion is needed
# because module-name collisions abort discovery before that runs.
exclude = [
  "^examples/split-fleet/",
  "^examples/deployed/(server|worker)/",
  "^examples/custom-graph/",
  "^examples/quickstart/",
  "^examples/local/",
]

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "upstash_redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aegra.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "click.*"
ignore_missing_imports = true
