[project]
name = "monet-agent-recruitment"
version = "0.0.0"
description = "Reference pipelines for agent discovery, trial, and performance management via capability agents."
requires-python = ">=3.12"
dependencies = [
    "monet",
]

[tool.uv.sources]
monet = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recruitment"]
