[project]
name = "social-media-llm-example"
version = "0.0.0"
description = "Reference monet workflow — runs the bundled monet.agents end to end."
requires-python = ">=3.12"
dependencies = [
    "monet[examples]",
    "click>=8.1",
    "langgraph-sdk>=0.1",
    "langgraph-cli[inmem]>=0.1",
]

[tool.uv.sources]
monet = { path = "../..", editable = true }
